--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cuda",
   "version": "1.0.0",
-  "description": "",
+  "description": "portfolio one page site",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/fbedussi/cuda#readme",
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.5",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1"
   }
